# mithra

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cog.toml  docker-compose.yml  docker-compose.yml.example
.forgejo/ISSUE_TEMPLATE/: default.yml
.github/workflows/: github-readme-notice.yml
backend/: Cargo.toml
backend/db/: 01_init_db.sql  db-model.mmd
backend/src/: main.rs
backend/src/auth/: dto.rs  extractor.rs  mod.rs  models.rs
backend/src/dto/: auth.rs  state.rs
backend/src/routes/: mod.rs  root.rs
backend/src/routes/api/: mod.rs  register.rs  signin.rs
backend/src/routes/api/register/: mod.rs  user.rs
backend/src/services/: auth.rs  password.rs
backend/src/structs/: auth.rs  error.rs
db/: 01_init_db.sql
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/messages/: de.json  en.json
frontend/project.inlang/: settings.json
frontend/src/: App.svelte  app.css  app.html  hooks.js  hooks.server.js
frontend/src/lib/: Box.svelte  Error.svelte  Input.svelte  Logo.svelte  Notice.svelte
frontend/src/lib/vault/: Button.svelte  Card.svelte
frontend/src/pages/: Register.svelte
frontend/src/routes/: +layout.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/signin/: +page.svelte
frontend/src/utils/: auth.ts
frontend/static/: LICENSE  shared.css
src/: main.rs
src/dto/: auth.rs
src/routes/: auth.rs
static/: index.html
static/register/: register.html  register.js
static/signin/: signin.html  signin.js
(+2 files in other folders)
