[package]
name = "mithra"
version = "0.0.0-git"
edition = "2024"

[dependencies]
actix-web = "4"
cookie = "0.16"
actix-session = { version = "0.11.0", features = ["redis-session", "redis-session-native-tls"] }
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "ipnet"] }
argon2 = "0.5"
actix-identity = "0.9.0"
getrandom = "0.4.2"
chrono = { version = "0.4.45", features = ["serde"] }
actix-quick-extract = "0.1.0-beta.0"
env_logger = "0.11.10"
log = "0.4.32"
thiserror = "2.0.18"
